--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -48,6 +48,186 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="42" data-price="40.32">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XB2U4b"><img src="https://images-na.ssl-images-amazon.com/images/I/918yNx90wOL._SY879_.jpg" alt="OtterBox DEFENDER SERIES Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>656 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>42% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XB2U4b">OtterBox DEFENDER SERIES Case for iPad Mini 1/2/3 - Retail Packaging - BLACK</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$40.32</span><span class="ori_price">$69.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XB2U4b">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="38" data-price="61.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xdFEuc"><img src="https://images-na.ssl-images-amazon.com/images/I/81gu1eFif-L._SX522_.jpg" alt="Kasa Cam by TP-Link" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>707 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>38% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xdFEuc">Kasa Cam by TP-Link – WiFi Camera for Home, Indoor Camera, Works with Alexa and Google (KC120)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$61.99</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xdFEuc">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="999.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XI7xJW"><img src="https://images-na.ssl-images-amazon.com/images/I/71cdNd8aKcL._SX522_.jpg" alt="Marcy Smith Cage Workout Machine" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>403 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XI7xJW">Marcy Smith Cage Workout Machine Total Body Training Home Gym System with Linear Bearing</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$999.99</span><span class="ori_price">$1,499.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XI7xJW">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="23" data-price="769.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xe1EF9"><img src="https://images-na.ssl-images-amazon.com/images/I/81bWkUdnanL._SX522_.jpg" alt="ASUS ROG Swift Gaming Monitor" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>366 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xe1EF9">ASUS ROG Swift PG348Q 34" Gaming Monitor Curved Ultra-Wide 3440x1440 100Hz IPS DisplayPort USB Eye Care G-SYNC</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$769.99</span><span class="ori_price">$999.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xe1EF9">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xemULf"><img src="https://images-na.ssl-images-amazon.com/images/I/61SCAhR5YAL._SX679_.jpg" alt="Smartphone Car Mount Holder" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>2,242 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xemULf">Koomus Pro CD-M Universal CD Slot Magnetic Cradle-less Smartphone Car Mount Holder for all iPhone and Android Devices</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$23.48</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xemULf">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="19.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X7ehMK"><img src="https://images-na.ssl-images-amazon.com/images/I/81l4-YufEXL._UY741_.jpg" alt="Casio Watch" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>353 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X7ehMK">Casio Unisex F108WHC-7BCF White Resin Band Watch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.89</span><span class="ori_price">$24.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X7ehMK">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="54" data-price="27.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FEgnhg"><img src="https://images-na.ssl-images-amazon.com/images/I/513bajXLb8L._SX679_.jpg" alt="Microsoft Sculpt Ergonomic Mouse" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>1,116 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>54% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FEgnhg">Microsoft Sculpt Ergonomic Mouse (L6V-00001)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$27.49</span><span class="ori_price">$59.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FEgnhg">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="16.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Fz6gu3"><img src="https://images-na.ssl-images-amazon.com/images/I/91GjCL%2BGN7L._SX522_.jpg" alt="Bunny James Box" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>62 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Fz6gu3">Bunny James Box - Hand Selected Premium Snacks Subscription: Casual Keto</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$16.00</span><span class="ori_price">$23.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fz6gu3">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="49" data-price="7.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xinUhq"><img src="https://images-na.ssl-images-amazon.com/images/I/71oR1hvkCiL._SX522_.jpg" alt="Chevron Techron Concentrate Plus Fuel" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,155 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>49% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xinUhq">Chevron Techron Concentrate Plus Fuel System Cleaner - 20 oz.</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$7.99</span><span class="ori_price">$15.74</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xinUhq">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="39" data-price="139.58">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LnzzDS"><img src="https://m.media-amazon.com/images/I/71VpqeHj6HL._AC_UL436_.jpg" alt="Dell Monitor" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>336 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>39% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LnzzDS">Dell Professional P2217H 21.5" Screen LED-Lit Monitor</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$139.58</span><span class="ori_price">$229.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LnzzDS">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card dealofday clearfix" data-score="58" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2XyPgP0"><img src="https://images-na.ssl-images-amazon.com/images/I/71Hs+vj5+8L._AC_SR300,300_.jpg" alt="Amazon Deal Of The Day" /></a>
