--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,217 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="40" data-price="5.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XvvEvd"><img src="https://m.media-amazon.com/images/I/61KIraLxg7L._SR400,400_.jpg" alt="Earbuds" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>16 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XvvEvd">Earbuds, GGMM Wired Earphones Noise Isolating Earbuds with Microphone Heavy Deep Bass Ear Buds, in Ear Headphones Fits All 3.5mm Jack Device (C300-Black-01)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.99</span><span class="ori_price">$9.99</span></address>
+      <p><span>Take <strong>40% off at $9.99</strong> with promo code: <strong>40Q2LNQY</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 27, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XvvEvd">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="6.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IRj2WY"><img src="https://m.media-amazon.com/images/I/61y2hUmEjmL._SR400,400_.jpg" alt="MADETEC Small Handheld Fan" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>19 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IRj2WY">MADETEC Small Handheld Fan, Portable Mini Personal Fan with USB Rechargeable Battery Operated Electric Cooling Fan for Office Room Outdoor Household...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.50</span><span class="ori_price">$12.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $12.99</strong> with promo code: <strong>50XPAGHA</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IRj2WY">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.45">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xdeljc"><img src="https://m.media-amazon.com/images/I/71cTzsIKXxL._SR400,400_.jpg" alt="Mobile Game Controller with Portable Charger 4000mAh Cooling Fan" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>17 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xdeljc">Mobile Game Controller with Portable Charger 4000mAh Cooling Fan for Fortnite PUBG, Phone Controller L1R1 Game Trigger Joystick Gamepad Grip with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.45</span><span class="ori_price">$24.89</span></address>
+      <p><span>Take <strong>50% off at $24.89</strong> with promo code: <strong>50NESOPQ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 28, 2019 at 11:00 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xdeljc">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JbSazV"><img src="https://m.media-amazon.com/images/I/61jRmkJPb8L._SR400,400_.jpg" alt="Wireless Charger" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-Rating_Num.jpg' %>"><p>Review_Num Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JbSazV">Wireless Charger, Nillkin Qi-Certified Fast Wireless Charging Pad 7.5W[Colorful LED Light] Compatible with iPhone Xs Max/XS/XR/X/8/8 Plus,10W for Samsung...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.99</span><span class="ori_price">$19.99</span>
+        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>15% off at $19.99</strong> with promo code: <strong>15UL4E3V</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JbSazV">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XAzfI9"><img src="https://m.media-amazon.com/images/I/51pzePyLfyL._SR400,400_.jpg" alt="Phone Holder for Car" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>122 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XAzfI9">Phone Holder for Car FLOVEME Universal Long Neck Dashboard & Windshield with Washable Suction Pad Car Phone Mount for iPhone X XR XS MAX 8 7 6s...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.49</span><span class="ori_price">$16.99</span>
+        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $16.99</strong> with promo code: <strong>50FLM001</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XAzfI9">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="20.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J9cxxB"><img src="https://m.media-amazon.com/images/I/71CDvs2cuIL._SR400,400_.jpg" alt="Voova Travel Laptop Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>4 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J9cxxB">Voova Travel Laptop Backpack Multipurpose Anti-Theft Business Backpack Water Resistant College School Computer Bag for Women & Men Fits 15.6 Inch...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.50</span><span class="ori_price">$40.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $40.99</strong> with promo code: <strong>50TL1W11</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J9cxxB">Use Code at Amazon</a><p>run out of stock soon</p></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="28.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZQs4sV"><img src="https://m.media-amazon.com/images/I/71INzuRHf5L._SR400,400_.jpg" alt="Gym Running Walking Shoes" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>203 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZQs4sV">Feetmat Mens Slip On Sneakers Laceless Lightweight Gym Running Walking Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$28.89</span><span class="ori_price">$33.99</span></address>
+      <p><span>Take <strong>15% off at $33.99</strong> with promo code: <strong>158SA4Z9</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZQs4sV">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.38">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZTM3a2"><img src="https://m.media-amazon.com/images/I/61-qG-orBNL._SR400,400_.jpg" alt="Msicyness Sports Duffle Bag" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>21 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZTM3a2">Msicyness Sports Duffle Bag 70L Overnight Bag Large Travel Duffel Tote for Men and Women Waterproof Carry on Weekender Bags with Shoe Compartment</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.38</span><span class="ori_price">$24.75</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $24.75</strong> with promo code: <strong>50HM8WEF</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 26, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZTM3a2">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="10.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XjcKZj"><img src="https://m.media-amazon.com/images/I/81TTTZdcrJL._SR400,400_.jpg" alt="FAYERXL Minimalist Wallets" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>60 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XjcKZj">FAYERXL Minimalist Wallets Gift for son daughter from Mom Dad Slim Wallet RFID Front Pocket Wallet</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.98</span><span class="ori_price">$16.90</span></address>
+      <p><span>Take <strong>35% off at $16.90</strong> with promo code: <strong>35QMIPY2</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 28, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XjcKZj">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="3.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FCXw6n"><img src="https://m.media-amazon.com/images/I/61iigDncivL._SR400,400_.jpg" alt="Garlic Press" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>19 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FCXw6n">Candy Color Garlic Press Multifunctional Ginger Garlic Press Mini Ginger Grinding Grater Planer Slicer Cutter Kitchen Cooking Gadgets Tools Utensils Accessories</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$3.50</span><span class="ori_price">$9.99</span></address>
+      <p><span>Take <strong>65% off at $9.99</strong> with promo code: <strong>6569XNZL</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 27, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FCXw6n">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="65" data-price="11.55">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Januz5"><img src="https://m.media-amazon.com/images/I/514hBnZ05+L._SR400,400_.jpg" alt="Bluetooth Headphones" /></a>
