--- a/app/views/home/index_02.html.erb
+++ b/app/views/home/index_02.html.erb
@@ -71,8 +71,7 @@
       <a href="/gadgets/new"><img src="<%=asset_path 'add.png' %>"></a>
     </div>
   <% end %>
-
-
 </div><!--./layout-->
+<!-- <%= render 'shared/footer' %> -->
 
      
