--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,14 +1,50 @@
 <div class="layout">
 
     <div class="footer">
-      <div class="footer-content">
-        <div class="footer-section about"></div>
-        <div class="footer-section links"></div>
-        <div class="footer-section contact-form"></div>
-      </div>
-      
-      <div class="footer-bottom">
-        &copy; ohigottabuythis.com | Designed by Steve
+
+      <div class="wrap">
+        <div class="footer-content">
+          <div class="footer-section about">
+            <h1 class="logo-text"><span>Oh,</span>i gotta buy this</h1>
+            <p>Oh,igottabuythis is the curation platform to discover awesome product from around the world. Staying up to date with the latest tech, the newest brilliant inventions, odd gadgets unique & weird design products and most incredible crowdfunding campaigns.</p>
+            <div class="contact">
+              <span><i class="fas fa-envelope"></i> &nbsp; ohigottabuythis@gmail.com </span>
+            </div>
+            <div class="socials">
+              <a target="_blank" href="#n"><i class="fab fa-facebook-square"></i></a>
+              <a target="_blank" href="#n"><i class="fab fa-instagram"></i></a>
+              <a target="_blank" href="#n"><i class="fab fa-twitter"></i></a>
+              <a target="_blank" href="#n"><i class="fab fa-youtube"></i></a>
+            </div>
+          </div>
+
+          <div class="footer-section links">
+            <h2>Quick Links</h2><br />
+            <ul>
+              <a href="#n"><li>HOME</li></a>
+              <a href="#n"><li>CATEGORY</li></a>
+              <a href="#n"><li>FEATURED</li></a>
+              <a href="#n"><li>THE BEST DEALS</li></a>
+              <a href="#n"><li>PROMO CODES</li></a>
+              <a href="#n"><li>QUICK SEARCH</li></a>
+            </ul>
+
+          </div>
+
+          <div class="footer-section contact-form">
+            <h2>Contact Us</h2><br />
+            <form action="/" method="post">
+             <input type="email" name="email" class="text-input contact-input" placeholder="Your email address...">
+             <textarea name="message" class="text-input contact-input" placeholder="Your message..."></textarea>
+             <button type="submit" class="btn btn-big contact-btn">Send</button>
+            </form>
+          </div>
+
+        </div>
+        
+        <div class="footer-bottom">
+          &copy; ohigottabuythis.com | Designed by Steve
+        </div>
       </div>
 
     </div>
